--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -6,7 +6,7 @@
 }
 
 .NavigationItem a {
-    color: #75dad9;
+    color: black;
     text-decoration: none;
     width: 100%;
     box-sizing: border-box;
