--- a/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -19,6 +19,19 @@
 
 .Logo {
     height: 80%;
+    box-sizing: border-box;
+    padding: 8px;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+}
+
+.MainItems {
+    width: 20%;
+    height: 100%;
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
 }
 
 @media (max-width: 499px) {
